// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-15 makeStyles-paper-14 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 makeStyles-firstRow-11 MuiGrid-container-44 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-space-between-63"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-146 makeStyles-checkbox-12"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-484"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Only show deposits
              </p>
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-146 makeStyles-checkbox-12"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-484"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Hide dust
              </p>
            </span>
          </label>
        </div>
        <div>
          <div
            aria-label="apy apr selector"
            class="MuiButtonGroup-root-215 makeStyles-apr-13"
            role="group"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-outlined-244 MuiButtonGroup-grouped-221 MuiButtonGroup-groupedHorizontal-222 MuiButtonGroup-groupedOutlined-229 MuiButtonGroup-groupedOutlinedHorizontal-230 MuiButtonGroup-groupedOutlined-229 makeStyles-selected-213 makeStyles-button-214"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-240"
              >
                APY
              </span>
              <span
                class="MuiTouchRipple-root-484"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-outlined-244 MuiButtonGroup-grouped-221 MuiButtonGroup-groupedHorizontal-222 MuiButtonGroup-groupedOutlined-229 MuiButtonGroup-groupedOutlinedHorizontal-230 MuiButtonGroup-groupedOutlined-229 makeStyles-button-214"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-240"
              >
                APR
              </span>
              <span
                class="MuiTouchRipple-root-484"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-root-268 MuiGrid-container-44"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiFormControl-root-271 makeStyles-formControl-269"
          >
            <label
              class="MuiFormLabel-root-287 MuiInputLabel-root-275 MuiInputLabel-formControl-281 MuiInputLabel-animated-284 MuiInputLabel-outlined-286"
              data-shrink="false"
              id="status-selector-id-label"
            >
              Status
            </label>
            <div
              class="MuiInputBase-root-321 MuiOutlinedInput-root-306 MuiInputBase-formControl-322"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="status-selector-id-label status-selector"
                class="MuiSelect-root-295 MuiSelect-select-296 MuiSelect-selectMenu-299 MuiSelect-outlined-298 MuiInputBase-input-332 MuiOutlinedInput-input-316"
                id="status-selector"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-305"
                data-testid="status-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174 MuiSelect-icon-301 MuiSelect-iconOutlined-304"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-343 MuiOutlinedInput-notchedOutline-315"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-345"
                >
                  <span>
                    Status
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiFormControl-root-271 makeStyles-formControl-347"
          >
            <label
              class="MuiFormLabel-root-287 MuiInputLabel-root-275 MuiInputLabel-formControl-281 MuiInputLabel-animated-284 MuiInputLabel-outlined-286"
              data-shrink="false"
              id="platform-selector-id-label"
            >
              Platform
            </label>
            <div
              class="MuiInputBase-root-321 MuiOutlinedInput-root-306 MuiInputBase-formControl-322"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="platform-selector-id-label platform-selector"
                class="MuiSelect-root-295 MuiSelect-select-296 MuiSelect-selectMenu-299 MuiSelect-outlined-298 MuiInputBase-input-332 MuiOutlinedInput-input-316"
                id="platform-selector"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-305"
                data-testid="platform-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174 MuiSelect-icon-301 MuiSelect-iconOutlined-304"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-343 MuiOutlinedInput-notchedOutline-315"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-345"
                >
                  <span>
                    Platform
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiFormControl-root-271 makeStyles-formControl-349"
          >
            <label
              class="MuiFormLabel-root-287 MuiInputLabel-root-275 MuiInputLabel-formControl-281 MuiInputLabel-animated-284 MuiInputLabel-outlined-286"
              data-shrink="false"
              id="rewards-selector-id-label"
            >
              Rewards
            </label>
            <div
              class="MuiInputBase-root-321 MuiOutlinedInput-root-306 MuiInputBase-formControl-322"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="rewards-selector-id-label rewards-selector"
                class="MuiSelect-root-295 MuiSelect-select-296 MuiSelect-selectMenu-299 MuiSelect-outlined-298 MuiInputBase-input-332 MuiOutlinedInput-input-316"
                id="rewards-selector"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-305"
                data-testid="rewards-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174 MuiSelect-icon-301 MuiSelect-iconOutlined-304"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-343 MuiOutlinedInput-notchedOutline-315"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-345"
                >
                  <span>
                    Rewards
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-md-true-105 MuiGrid-grid-lg-6-125"
        >
          <div
            class="MuiFormControl-root-271 MuiTextField-root-353 makeStyles-root-351"
          >
            <div
              class="MuiInputBase-root-321 MuiOutlinedInput-root-306 MuiInputBase-formControl-322 MuiInputBase-adornedEnd-326 MuiOutlinedInput-adornedEnd-311"
            >
              <input
                aria-invalid="false"
                aria-label="Vault Search"
                class="MuiInputBase-input-332 MuiOutlinedInput-input-316 MuiInputBase-inputAdornedEnd-337 MuiOutlinedInput-inputAdornedEnd-320"
                placeholder="Search by vault name, token, rewards..."
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root-354 MuiInputAdornment-positionEnd-357"
              >
                <button
                  aria-label="search"
                  class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-icon-352 MuiIconButton-sizeSmall-169"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-170"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-174"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-484"
                  />
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-343 MuiOutlinedInput-notchedOutline-315"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-344"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <button
            class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-text-241 MuiButton-textPrimary-242 MuiButton-fullWidth-262"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-240"
            >
              CLEAR ALL
            </span>
            <span
              class="MuiTouchRipple-root-484"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiGrid-root-43 makeStyles-root-391 MuiGrid-container-44 MuiGrid-item-45 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
      >
        <div
          class="MuiGrid-root-43 makeStyles-spacingItem-393 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <p
            class="MuiTypography-root-183 makeStyles-title-384 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-484"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-484"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-484"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 makeStyles-tvlColumn-390 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-484"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-395 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-399 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <div
            class="makeStyles-root-405"
          >
            <img
              alt="curve-renBTC-wBTC-sBTC logo"
              class="makeStyles-position-406"
              src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <h6
            class="MuiTypography-root-183 makeStyles-vaultName-400 MuiTypography-subtitle1-194"
          >
            Curve.fi renBTC/wBTC/sBTC
          </h6>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-411 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              0.25%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-421"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-397 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-425"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-397 MuiTypography-body1-185"
            >
              135697015
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-tagsContainer-402 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45 MuiGrid-align-items-xs-center-52"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-399 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
          >
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-427 makeStyles-clickableLabel-429 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-430 makeStyles-tag-426 makeStyles-clickableTag-428 MuiChip-sizeSmall-431"
              >
                <span
                  class="MuiChip-label-452 MuiChip-labelSmall-453"
                >
                  Ecosystem Helper
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-427 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
              >
                <span
                  class="MuiChip-label-452 MuiChip-labelSmall-453"
                >
                  Convex
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-395 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-399 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <div
            class="makeStyles-root-405"
          >
            <img
              alt="BADGER logo"
              class="makeStyles-position-460"
              src="/assets/icons/badger.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <h6
            class="MuiTypography-root-183 makeStyles-vaultName-400 MuiTypography-subtitle1-194"
          >
            Badger
          </h6>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-461 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-464"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-397 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-467"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-397 MuiTypography-body1-185"
            >
              10000
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-tagsContainer-402 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45 MuiGrid-align-items-xs-center-52"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-399 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
          >
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-427 makeStyles-clickableLabel-429 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-430 makeStyles-tag-426 makeStyles-clickableTag-428 MuiChip-sizeSmall-431"
              >
                <span
                  class="MuiChip-label-452 MuiChip-labelSmall-453"
                >
                  DCA
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-427 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
              >
                <span
                  class="MuiChip-label-452 MuiChip-labelSmall-453"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-395 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-399 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        >
          <div
            class="makeStyles-root-405"
          >
            <img
              alt="DIGG logo"
              class="makeStyles-position-468"
              src="/assets/icons/digg.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <h6
            class="MuiTypography-root-183 makeStyles-vaultName-400 MuiTypography-subtitle1-194"
          >
            Digg
          </h6>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-469 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-472"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-397 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiBox-root-410 MuiBox-root-475"
          >
            <p
              class="MuiTypography-root-183 makeStyles-itemText-397 MuiTypography-body1-185"
            >
              2874
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-tagsContainer-402 MuiGrid-container-44 MuiGrid-spacing-xs-2-67 MuiGrid-item-45 MuiGrid-align-items-xs-center-52"
      >
        <div
          class="MuiGrid-root-43 makeStyles-iconBadgeContainer-399 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
          >
            <div
              class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
            >
              <span
                class="MuiTypography-root-183 makeStyles-label-427 MuiTypography-caption-186 MuiTypography-displayInline-211"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
              >
                <span
                  class="MuiChip-label-452 MuiChip-labelSmall-453"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders mobile version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-15 makeStyles-paper-14 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <label
            class="MuiFormControlLabel-root-146"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <button
            class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-text-241 makeStyles-button-484"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-240 makeStyles-buttonLabel-485"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-displayInline-211"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiGrid-root-43 makeStyles-root-391 MuiGrid-container-44 MuiGrid-item-45 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
      >
        <div
          class="MuiGrid-root-43 makeStyles-spacingItem-393 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <p
            class="MuiTypography-root-183 makeStyles-title-384 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 makeStyles-tvlColumn-390 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-496 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-405"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-499"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-498 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-497 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-500 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              0.25%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-503"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 makeStyles-clickableTag-428 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-496 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-405"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-504"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-498 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-497 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-505 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-508"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 makeStyles-clickableTag-428 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-496 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-405"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-509"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-498 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-497 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-510 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-513"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders tablet version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-15 makeStyles-paper-14 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-true-77"
        >
          <label
            class="MuiFormControlLabel-root-146"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-171 MuiIconButton-root-162 PrivateSwitchBase-root-158 MuiCheckbox-root-152 MuiCheckbox-colorPrimary-156 MuiIconButton-colorPrimary-166"
            >
              <span
                class="MuiIconButton-label-170"
              >
                <input
                  class="PrivateSwitchBase-input-161"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-174"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </span>
            <span
              class="MuiTypography-root-183 MuiFormControlLabel-label-151 MuiTypography-body1-185"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-justify-content-xs-flex-end-62 MuiGrid-grid-xs-true-77"
        >
          <button
            class="MuiButtonBase-root-171 MuiButton-root-239 MuiButton-text-241 makeStyles-button-484"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-240 makeStyles-buttonLabel-485"
            >
              <p
                class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-displayInline-211"
              >
                Filters & Search
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-174"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiGrid-root-43 makeStyles-root-391 MuiGrid-container-44 MuiGrid-item-45 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-2-67"
      >
        <div
          class="MuiGrid-root-43 makeStyles-spacingItem-393 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
        />
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77 MuiGrid-grid-lg-4-123"
        >
          <p
            class="MuiTypography-root-183 makeStyles-title-384 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-43 makeStyles-title-384 makeStyles-columnTitle-389 makeStyles-tvlColumn-390 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-align-items-xs-center-52 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body2-184 MuiTypography-colorTextSecondary-209"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-171 MuiIconButton-root-162 makeStyles-sortIcon-385 makeStyles-nonSetSort-387"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-170"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-385"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-496 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-405"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-499"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-498 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-497 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-500 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              0.25%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-503"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 makeStyles-clickableTag-428 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-496 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-405"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-504"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-498 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-497 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-505 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-508"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 makeStyles-clickableTag-428 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-15 MuiCard-root-404 MuiGrid-root-43 makeStyles-root-496 MuiGrid-container-44 MuiGrid-direction-xs-column-47 MuiPaper-elevation1-19 MuiPaper-rounded-16"
    >
      <div
        class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="makeStyles-root-405"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-509"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-183 makeStyles-name-498 MuiTypography-subtitle1-194 MuiTypography-displayInline-211"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-43 makeStyles-info-497 MuiGrid-container-44 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            APY
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-510 makeStyles-root-407"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185 MuiTypography-colorTextPrimary-208 MuiTypography-displayInline-211"
            >
              8.17%
            </p>
            <img
              alt="apy info icon"
              class="makeStyles-apyInfo-409"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-item-45 MuiGrid-direction-xs-column-47 MuiGrid-grid-xs-true-77"
        >
          <p
            class="MuiTypography-root-183 MuiTypography-body1-185"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-410 MuiBox-root-513"
          >
            <p
              class="MuiTypography-root-183 MuiTypography-body1-185"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-43 MuiGrid-item-45"
      >
        <div
          class="MuiGrid-root-43 MuiGrid-container-44 MuiGrid-spacing-xs-1-66"
        >
          <div
            class="MuiGrid-root-43 MuiGrid-item-45 MuiGrid-grid-xs-auto-76"
          >
            <div
              class="MuiChip-root-430 makeStyles-tag-426 MuiChip-sizeSmall-431"
            >
              <span
                class="MuiChip-label-452 MuiChip-labelSmall-453"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
